--- a/Customer_Query_Portal/Customer_Query_Portal.csproj
+++ b/Customer_Query_Portal/Customer_Query_Portal.csproj
@@ -20,6 +20,11 @@
     <None Include="$(SpaRoot)**" Exclude="$(SpaRoot)node_modules\**" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\QueryPortalRepositories\QueryPortalRepositories.csproj" />
+    <ProjectReference Include="..\..\QueryPortalServices\QueryPortalServices.csproj" />
+  </ItemGroup>
+
   <Target Name="DebugEnsureNodeEnv" BeforeTargets="Build" Condition=" '$(Configuration)' == 'Debug' And !Exists('$(SpaRoot)node_modules') ">
     <!-- Ensure Node.js is installed -->
     <Exec Command="node --version" ContinueOnError="true">
