added Controller and service layer

--- a/Customer_Query_Portal/Customer_Query_Portal.csproj
+++ b/Customer_Query_Portal/Customer_Query_Portal.csproj
@@ -21,8 +21,9 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\QueryPortalRepositories\QueryPortalRepositories.csproj" />
-    <ProjectReference Include="..\..\QueryPortalServices\QueryPortalServices.csproj" />
+    <ProjectReference Include="..\QueryPortalModel\QueryPortalModel.csproj" />
+    <ProjectReference Include="..\QueryPortalRepositories\QueryPortalRepositories.csproj" />
+    <ProjectReference Include="..\QueryPortalServices\QueryPortalServices.csproj" />
   </ItemGroup>
 
   <Target Name="DebugEnsureNodeEnv" BeforeTargets="Build" Condition=" '$(Configuration)' == 'Debug' And !Exists('$(SpaRoot)node_modules') ">
